# typm

./: Cargo.toml  README.md  pyproject.toml
src/: config.rs  core.rs  main.rs
src/typm/: __init__.py  cli.py  models.py  utils.py
