[package]
name = "typst-build"
version = "0.1.0"
repository = "https://github.com/jassielof/typst-build"
authors = ["jassielof"]
description = "A tool to build Typst packages/templates."
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
dirs-next = "2.0.0"
globset = "0.4.16"
regex = "1.11.1"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
toml = "0.8.20"
url = "2.5.4"
walkdir = "2.5.0"
